Fixed spacing issue with header

--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,7 @@ header {
   padding: var(--space-md) var(--space-xs);
   align-items: center;
   display: flex;
+  margin: var(--space-xs);
   justify-content: space-between;
 }
 #mobile-menu-icon {
